<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guimoye.mario.VerDatosPerfil.VerDatosPerfil">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/verdatos_imagen"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/fotoperfil" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_tipo"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:editable="false" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclave">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtClave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nombre"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtNacionalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nacionalidad"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtDocumento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nrodocumento"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtTlfno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_tlfno"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/verdatos_txtOcupacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_ocupacion"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">


                    <TextView
                        android:text="Disponible: "
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="@dimen/cast_expanded_controller_control_button_margin" />

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/verdatos_toggleButton"
                        android:layout_weight="1"
                        android:background="@drawable/bgtoggle"
                        android:button="@null"
                        android:textOff=""
                        android:textOn=""/>

                </LinearLayout>


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/verdatos_ratingBar"
                    android:numStars="5"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_localizar_cliente"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Aceptar Carrera"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bFlotante_perfilCliente"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"

            app:fab_addButtonColorNormal="?attr/colorAccent"
            app:fab_addButtonColorPressed="#66a94e"
            app:fab_addButtonPlusIconColor="#ffffff"
            app:fab_labelStyle="@style/Etiquetas"

            android:elevation="10dp">


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SubPerfilClienteAddFavoritos"
                app:fab_icon="@drawable/ic_tv_dark"
                app:fab_colorNormal="#1c2abf"
                app:fab_colorPressed="#4db98f"
                app:fab_size="mini"
                app:fab_title="Agregar a Favoritos"
                />


        </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>
